[gd_scene load_steps=13 format=3 uid="uid://cp28gjjsjws27"]

[ext_resource type="Script" uid="uid://dnjsg2oqcwbpv" path="res://maze.gd" id="1_tra7k"]
[ext_resource type="Texture2D" uid="uid://cixjd1sfeidf7" path="res://textures/end_marker.png" id="2_u11kd"]
[ext_resource type="Texture2D" uid="uid://dcwbxupykjjsc" path="res://textures/start_marker.png" id="3_1nuxl"]
[ext_resource type="Environment" uid="uid://dpfnmv1x4cv2d" path="res://map_environments.tres" id="5_21toe"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_elldp"]
albedo_color = Color(1, 0, 0, 1)
disable_receive_shadows = true

[sub_resource type="CylinderMesh" id="CylinderMesh_immoj"]
material = SubResource("StandardMaterial3D_elldp")
top_radius = 1.5
bottom_radius = 1.5
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_untws"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_bg1dy"]
material = SubResource("StandardMaterial3D_untws")
size = Vector3(1, 2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1nuxl"]
transparency = 1
albedo_texture = ExtResource("2_u11kd")
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_ugm30"]
material = SubResource("StandardMaterial3D_1nuxl")
size = Vector2(4, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ugm30"]
transparency = 1
albedo_texture = ExtResource("3_1nuxl")
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_pgab2"]
material = SubResource("StandardMaterial3D_ugm30")
size = Vector2(3.5, 3.5)

[node name="Maze" type="Node3D"]
script = ExtResource("1_tra7k")

[node name="PlayerMarker" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 0, 1, -4.37114e-08, -1, 0, 1.91069e-15, 0, 5, 0)
layers = 262144
cast_shadow = 0
mesh = SubResource("CylinderMesh_immoj")
skeleton = NodePath("../MapViewport")

[node name="DirectionRoot" type="Node3D" parent="PlayerMarker"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="DirectionArrow" type="MeshInstance3D" parent="PlayerMarker/DirectionRoot"]
layers = 262144
cast_shadow = 0
mesh = SubResource("PrismMesh_bg1dy")
skeleton = NodePath("../..")

[node name="EndMarker" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.9407e-08, 2.66454e-15, 0, -4.37114e-08, 1, 8.9407e-08, 1, 4.37114e-08, 54, 4, 78)
layers = 524288
cast_shadow = 0
mesh = SubResource("QuadMesh_ugm30")
skeleton = NodePath("../MapViewport")

[node name="StartMarker" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 42, 4, -2)
layers = 524288
cast_shadow = 0
mesh = SubResource("QuadMesh_pgab2")
skeleton = NodePath("../MapViewport")

[node name="MapViewport" type="SubViewport" parent="."]
msaa_3d = 2
positional_shadow_atlas_size = 0
size = Vector2i(2048, 2048)
render_target_update_mode = 1

[node name="MapViewportCamera" type="Camera3D" parent="MapViewport"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 40, 40, 40)
keep_aspect = 0
cull_mask = 688127
environment = ExtResource("5_21toe")
projection = 1
size = 124.0
far = 100.0
